<resources>

    <string name="app_name">Moms and Kids</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="recomm">Search Recommended Foods</string>
    <string name="search">Search</string>
    <string name="register">Register your Child</string>
    <string name="name">Name</string>
    <string name="dob">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weight">Weight(in kgs)</string>
    <string name="allergy">Allergies or other health issues</string>
    <string name="btnregister">Register</string>
    <string name="profile">Child\'s profile page</string>
    <string name="child_name">Josh</string>
    <string name="age">Age(in months)</string>
    <string name="recomm_foods">Get recommended foods</string>
    <string name="res_recomm_foods">Recommended foods for your child:-</string>
    <string name="from_db">Recommended foods from the database</string>
    <string name="signup">Sign up</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="cpassword">Confirm password</string>
    <string name="appname">Moms and Baby\'s Guide to Healthy Diets</string>
    <string name="login">Log in</string>
    <string name="newuser">New? Please sign up here</string>
    <string name="alreadysignedup">Already signed up? Log in.</string>
    <string name="delete">Delete user.</string>
    <string name="add_foods">Add new foods</string>
    <string name="view_foods">View all foods</string>
    <string name="foods">Foods</string>
    <string name="how_to">How to prepare</string>
    <string name="update_food"></string>
    <string name="update_foods">Update food</string>
    <string name="delete_food">Delete a food record</string>
    <string name="submit">Submit</string>
    <string name="agemonths">Age(in months)</string>
    <string name="logout">Log out</string>
    <string name="food">Get food</string>
    <string name="foodsandallergies">Foods and Allergies</string>
    <string name="allergylist">Allergy</string>
    <string name="blogs">Blogs</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="toMainPage">Get recommended foods</string>
    <string name="profile2">Child profile(from pref)</string>
    <string name="users">Report of users</string>
    <string name="delete_user">Delete user</string>
    <string name="reports">Reports generated by the Admin.</string>
    <string name="user">1. Total number of users registered</string>
    <string name="kids">2. Number of kids registered into Moms and Kids App</string>
    <string name="as_of_date">"As of(date): "</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_categories">Categories</string>
    <string name="section_format">Hello World from section: %1$d</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apptheme">Welcome to Moms and Kids. An application to help mothers know the right foods to feed their babies and monitor their growth.</string>
    <string name="age2">Age(months):</string>
    <string name="foodss">Foods:</string>
    <string name="how_too">How to prepare:</string>
    <string name="details">Additional details:</string>
    <string name="name_of_allergy">Allergy:</string>
    <string name="symptoms">Symptoms</string>
    <string name="foods_to_avoid">Foods to avoid</string>
    <string name="alternative_foods">Alternative foods</string>


</resources>
